_templates/namespace.yaml
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>     # Enter namespace
